--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="etele">Eテレ</string>
     <string name="bs">BS</string>
     <string name="bs_premium">BSプレミアム</string>
+    <string name="live_in">居住地</string>
 </resources>
