--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="bs">BS</string>
     <string name="bs_premium">BSプレミアム</string>
     <string name="live_in">居住地</string>
+    <string name="residence">residence</string>
 
 </resources>
