--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="bs_premium">BSプレミアム</string>
     <string name="live_in">居住地</string>
     <string name="residence">residence</string>
+    <string name="app_title">わしはテレビはNHKしか見ん</string>
 
 </resources>
