--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="serch">検索</string>
     <string name="sougou">総合</string>
     <string name="etele">Eテレ</string>
-    <string name="bs">BS</string>
+    <string name="bs">BS1</string>
     <string name="bs_premium">BSプレミアム</string>
     <string name="live_in">居住地</string>
     <string name="residence">residence</string>
