--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="bs_premium">BSプレミアム</string>
     <string name="live_in">居住地</string>
     <string name="residence">residence</string>
-    <string name="app_title">わしはテレビはNHKしか見ん</string>
+    <string name="app_title">NHK番組表</string>
     <string name="subtitle">サブタイトル</string>
     <string name="actor">演者</string>
     <string name="detail">詳細</string>
